--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Gravitas</title>
-        <script type="text/javascript" src="third_party/phaser.min.js"></script>
-        <script type="text/javascript" src="third_party/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="node_modules/phaser/build/phaser.min.js"></script>
+        <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
         
         <style type="text/css">
             html, body {
