--- a/levelEdit.html
+++ b/levelEdit.html
@@ -3,8 +3,8 @@
     <head>
         
         <title>Level Editor</title>
-        <script type="text/javascript" src="third_party/jquery-3.1.1.min.js"></script>
-        <script type="text/javascript" src="third_party/phaser.min.js"></script>
+        <script type="text/javascript" src="node_modules/phaser/build/phaser.min.js"></script>
+        <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
         <link rel="stylesheet" href="assets/style.css" type="text/css">
     </head>
     
