--- a/index.html
+++ b/index.html
@@ -1,53 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Gravitas</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <script type="text/javascript" src="node_modules/phaser/build/phaser.min.js"></script>
-        <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 
-        <style type="text/css">
-            html, body {
-                overflow-y: hidden;
-                overflow-x: hidden;
-                width: 100%;
-                height: 100%;
-                background-color: #444;
-            }
-            #gameWindow{
-                width: 100%;
-                height: 100%;
-            }
-            canvas{
-                position: absolute;
-                top: 60%;
-                left: 50%;
-                transform: translate(-50%, -60%);
-            }
-        </style>
+<head>
+  <title>Gravitas</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <script type="text/javascript" src="node_modules/phaser/build/phaser.min.js"></script>
+  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 
-        <script type="text/javascript" src="gravitas/boot.js"></script>
-        <script type="text/javascript" src="gravitas/menu.js"></script>
-        <script type="text/javascript" src="gravitas/win.js"></script>
-        <script type="text/javascript" src="gravitas/game/gravObj.js"></script>
-        <script type="text/javascript" src="gravitas/game/levelLoader.js"></script>
-        <script type="text/javascript" src="gravitas/game/pauseHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/deathHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/exitHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/freezeHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/jumpHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/shadowHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/optionsData.js"></script>
-        <script type="text/javascript" src="gravitas/game/optionsHandler.js"></script>
-        <script type="text/javascript" src="gravitas/game/game.js"></script>
-        <script type="text/javascript" src="gravitas/levelSelect.js"></script>
-        <script type="text/javascript" src="gravitas/main.js"></script>
+  <style type="text/css">
+    html,
+    body {
+      overflow-y: hidden;
+      overflow-x: hidden;
+      width: 100%;
+      height: 100%;
+      background-color: #444;
+    }
 
-    </head>
+    #gameWindow {
+      width: 100%;
+      height: 100%;
+    }
 
-    <body>
-        <div align="center" id="gameWindow"></div>
-        <audio id="mainTheme" loop=True src="assets/audio/gravitasTheme.mp3" />
+    canvas {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -60%);
+    }
+
+    @font-face {
+      font-family: "AR Destine";
+      font-style: normal;
+      font-weight: 400;
+      src: url("/assets/art/fonts/Ar-Destine-Font.ttf");
+    }
+  </style>
+
+  <script type="text/javascript" src="gravitas/boot.js"></script>
+  <script type="text/javascript" src="gravitas/menu.js"></script>
+  <script type="text/javascript" src="gravitas/win.js"></script>
+  <script type="text/javascript" src="gravitas/game/gravObj.js"></script>
+  <script type="text/javascript" src="gravitas/game/levelLoader.js"></script>
+  <script type="text/javascript" src="gravitas/game/pauseHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/deathHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/exitHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/freezeHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/jumpHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/shadowHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/optionsData.js"></script>
+  <script type="text/javascript" src="gravitas/game/optionsHandler.js"></script>
+  <script type="text/javascript" src="gravitas/game/game.js"></script>
+  <script type="text/javascript" src="gravitas/levelSelect.js"></script>
+  <script type="text/javascript" src="gravitas/main.js"></script>
+
+</head>
+
+<body>
+  <div align="center" id="gameWindow"></div>
+  <audio id="mainTheme" loop=True src="assets/audio/gravitasTheme.mp3" />
     </body>
 
 </html>
