--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       font-family: "AR Destine";
       font-style: normal;
       font-weight: 400;
-      src: url("/assets/art/fonts/Ar-Destine-Font.ttf");
+      src: url('assets/art/fonts/Ar-Destine-Font.ttf') format('truetype');
     }
   </style>
 
