Add explanation for hack

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <div style="position:absolute;left:-100px;font-family: AR Destine;">.</div>
+  <div style="position:absolute;left:-100px;font-family: AR Destine;">.</div> <!-- This is a hack to get the AR Destine font to load properly before the default web font gets to it -->
   <div align="center" id="gameWindow"></div>
   <audio id="mainTheme" loop=True src="assets/audio/gravitasTheme.mp3" />
 
