Add new changes, not functioning yet.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Gravitas</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <script type="text/javascript" src="third_party/phaser.min.js"></script>
+  <script type="text/javascript" src="third_party/jquery-3.3.1.min.js"></script>
 
   <style type="text/css">
     html,
@@ -34,9 +36,6 @@
       src: url('assets/art/fonts/Ar-Destine-Font.ttf') format('truetype');
     }
   </style>
-
-  <script type="text/javascript" src="node_modules/phaser/build/phaser.min.js"></script>
-  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
